# ROPsmith

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md  meson.build  meson_options.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml
.github/workflows/: build.yml  cloc.yaml  cloc.yml  release.yaml  release.yml  tests.yml
scripts/: setup_samples.sh
src/: macros.h  main.c  main.cpp  program.cpp  program.h
src/core/: binary.cpp  binary.h  meson.build  rop.cpp  rop.h  ropsmith.cpp  ropsmith.h
src/core/rop/: finder.c  finder.h  scanner.cpp  scanner.h
src/include/: basetsd.h  minwindef.h  windef.h  winnt_min.h
src/include/ropsmith/: macros.h  ropsmith.h
src/rop/: finder.c  finder.h  meson.build
src/ropsmith/: meson.build  ropsmith.c
src/utils/: io.cpp  io.h  meson.build  utils.c  utils.h
test/: meson.build  test_finder.cpp
tests/: meson.build  test_finder.c
